Victory speech, Emergence.

--- a/scenarios/Emergence.cfg
+++ b/scenarios/Emergence.cfg
@@ -395,4 +395,49 @@
 			name=test body
 		[/fire_event]
 	[/event]
+
+	[event]
+		name=last breath
+		[filter]
+			id=Ceradia
+		[/filter]
+
+		[message]
+			speaker=unit
+			message= _ "But the Holy One-"
+		[/message]
+	[/event]
+
+	[event]
+		name=last breath
+		[filter]
+			id=Bat
+		[/filter]
+
+		{TOMB_VOICE (_ "Abari, my master!")}
+	[/event]
+
+	[event]
+		name=victory
+
+		[message]
+			speaker=Morlan
+			message= _ "<b>Thar-Nella claims victory!</b>"
+		[/message]
+
+		[message]
+			speaker=Morri
+			message= _ "It is done."
+		[/message]
+
+		[message]
+			speaker=Zeth
+			message= _ "Now all that remains is to bring the body of Abari back to Master Cain."
+		[/message]
+
+		[message]
+			speaker=Morri
+			message= _ "At last we can return victorious."
+		[/message]
+	[/event]
 [/scenario]
