Seal off the Path of Life.

--- a/scenarios/Insanity.cfg
+++ b/scenarios/Insanity.cfg
@@ -217,58 +217,74 @@
 	[/event]
 	{DOOR 52,4}
 	[+event]
-		[message]
-			speaker=Zeth
-			message= _ "There is light ahead! The path splits here, there is a crack leading to the outside, and a tunnel going deeper into the tomb."
-		[/message]
+		# TODO: Path of Life
+		#ifdef _unused_
+			[message]
+				speaker=Zeth
+				message= _ "There is light ahead! The path splits here, there is a crack leading to the outside, and a tunnel going deeper into the tomb."
+			[/message]
 
-		[message]
-			speaker=Twinkle
-			message= _ "Which way do we go?"
-		[/message]
+			[message]
+				speaker=Twinkle
+				message= _ "Which way do we go?"
+			[/message]
 
-		[message]
-			speaker=Zeth
-			message= _ "If we leave the tomb now, we may never be able to complete our task assigned to us. Yet, Master Morri is probably outside, and we don't know what is happening to her. Would she want us to abandon the mission?"
-		[/message]
-
-		[item]
-			image=items/gohere.png
-			x,y=50,1
-		[/item]
+			[message]
+				speaker=Zeth
+				message= _ "If we leave the tomb now, we may never be able to complete our task assigned to us. Yet, Master Morri is probably outside, and we don't know what is happening to her. Would she want us to abandon the mission?"
+			[/message]
+		#else
+			[message]
+				speaker=Zeth
+				message= _ "There is a tunnel going deeper into the tomb."
+			[/message]
+		#endif
 
 		[item]
 			image=items/gohere.png
 			x,y=60,2
 		[/item]
 
-		{OBJECTIVES (description= _ "Move Zeth to one of the paths.")}
+		# TODO: Path of Life
+		#ifdef _unused_
+			[item]
+				image=items/gohere.png
+				x,y=50,1
+			[/item]
+
+			{OBJECTIVES (description= _ "Move Zeth to one of the paths.")}
+		#else
+			{OBJECTIVES (description= _ "Move Zeth to the path.")}
+		#endif
 	[/event]
 
 	#undef DOOR
 
-	[event]
-		name=moveto
-		[filter]
-			id=Zeth
-			x,y=50,1
-		[/filter]
+	# TODO: Path of Life
+	#ifdef _unused_
+		[event]
+			name=moveto
+			[filter]
+				id=Zeth
+				x,y=50,1
+			[/filter]
 
-		[message]
-			speaker=Zeth
-			message= _ "We cannot leave Master Morri alone. Follow me!"
-		[/message]
+			[message]
+				speaker=Zeth
+				message= _ "We cannot leave Master Morri alone. Follow me!"
+			[/message]
 
-		[set_variable]
-			name=went_after_morri
-			value=yes
-		[/set_variable]
+			[set_variable]
+				name=went_after_morri
+				value=yes
+			[/set_variable]
 
-		{END_VICTORY yes}
-		[+endlevel]
-			next_scenario=Slaughter
-		[/endlevel]
-	[/event]
+			{END_VICTORY yes}
+			[+endlevel]
+				next_scenario=Slaughter
+			[/endlevel]
+		[/event]
+	#endif
 
 	[event]
 		name=moveto
