ENABLE_PATH_OF_LIFE macro.

--- a/scenarios/Insanity.cfg
+++ b/scenarios/Insanity.cfg
@@ -149,6 +149,13 @@
 		[+unit]
 			variation=wose
 		[/unit]
+
+		#ifndef ENABLE_PATH_OF_LIFE
+			[terrain]
+				terrain=Xos
+				x,y=50,2
+			[/terrain]
+		#endif
 	[/event]
 
 	#undef PETRIFIED
@@ -217,8 +224,7 @@
 	[/event]
 	{DOOR 52,4}
 	[+event]
-		# TODO: Path of Life
-		#ifdef _unused_
+		#ifdef ENABLE_PATH_OF_LIFE
 			[message]
 				speaker=Zeth
 				message= _ "There is light ahead! The path splits here, there is a crack leading to the outside, and a tunnel going deeper into the tomb."
@@ -245,8 +251,7 @@
 			x,y=60,2
 		[/item]
 
-		# TODO: Path of Life
-		#ifdef _unused_
+		#ifdef ENABLE_PATH_OF_LIFE
 			[item]
 				image=items/gohere.png
 				x,y=50,1
@@ -260,8 +265,7 @@
 
 	#undef DOOR
 
-	# TODO: Path of Life
-	#ifdef _unused_
+	#ifdef ENABLE_PATH_OF_LIFE
 		[event]
 			name=moveto
 			[filter]
