--- a/scenarios/Emergence.cfg
+++ b/scenarios/Emergence.cfg
@@ -8,6 +8,7 @@
 
 	turns=30
 	victory_when_enemies_defeated=yes
+	{NEW_GOLD_CARRYOVER 0}
 
 	{DEFAULT_MUSIC_PLAYLIST}
 	{COMMON_DEATHS}
@@ -159,7 +160,6 @@
 			[/objective]
 			{DEATH_LOSE_OBJECTIVE (_ "Death of Morlan") id=Morlan}
 			{COMMON_LOSSES}
-			{CARRYOVER_OBJECTIVE 40 yes}
 			{IS_LAST_SCENARIO}
 			[note]
 				description=_ "If Morri is rescued and moves next to Zeth, help will arrive from Thar-Nella."
@@ -224,19 +224,9 @@
 
 				{THUNDER (
 					[unit]
-						{WCHARACTER_MORLAN_DEAD}
-						{IS_LOYAL}
-						{IS_HERO}
+						{CHARACTER_MORLAN}
 						placement=leader
 					[/unit]
-
-					[modify_unit]
-						[filter]
-							id=Morlan
-						[/filter]
-
-						{TRAIT_LOYAL}
-					[/modify_unit]
 
 					[animate_unit]
 						flag=post_teleport
