--- a/scenarios/Entrance.cfg
+++ b/scenarios/Entrance.cfg
@@ -46,24 +46,7 @@
 		name=prestart
 		{RECALL_LOYALS}
 
-		{CREATE_RECALL Cain (
-			{WCHARACTER_CAIN}
-			{IS_LOYAL}
-			{IS_HERO}
-		)}
-
-		[modify_unit]
-			[filter]
-				id=Cain
-			[/filter]
-			{TRAIT_LOYAL}
-			# At this point Cain is ~90 years old. We can indicate this through the aged trait.
-			{TRAIT_AGED}
-		[/modify_unit]
-
-		[recall]
-			id=Cain
-		[/recall]
+		{CREATE_OR_RECALL Cain {CHARACTER_CAIN}}
 
 		{LOYAL_UNIT 1 (Thug) 8 27}
 		{LOYAL_UNIT 1 (Footpad) 8 27}
