--- a/utils/characters.cfg
+++ b/utils/characters.cfg
@@ -42,11 +42,27 @@
 	unrenamable=yes
 #enddef
 
+#define CHARACTER_CAIN
+	{WCHARACTER_CAIN}
+	{IS_LOYAL}
+	{IS_HERO}
+	[+modifications]
+		{TRAIT_LOYAL}
+		{TRAIT_AGED}
+	[/modifications]
+#enddef
+
+#define CHARACTER_MORLAN
+	{WCHARACTER_MORLAN_DEAD}
+	{IS_LOYAL}
+	{IS_HERO}
+	[+modifications]
+		{TRAIT_LOYAL}
+	[/modifications]
+#enddef
+
 #define RECALL_LOYALS
-	{CREATE_RECALL Morri {CHARACTER_MORRI}}
-	[recall]
-		id=Morri
-	[/recall]
+	{CREATE_OR_RECALL Morri {CHARACTER_MORRI}}
 #enddef
 
 # Post-earth.
@@ -67,10 +83,7 @@
 #define RECALL_LOYALS_3
 	{RECALL_LOYALS_2}
 
-	{CREATE_RECALL Twinkle {CHARACTER_TWINKLE}}
-	[recall]
-		id=Twinkle
-	[/recall]
+	{CREATE_OR_RECALL Twinkle {CHARACTER_TWINKLE}}
 #enddef
 
 # Post-water.
