--- a/scenarios/Finale.cfg
+++ b/scenarios/Finale.cfg
@@ -29,6 +29,20 @@
 		[+recall]
 			x,y=18,5
 		[/recall]
+
+		{LOYAL_UNIT 1 Colossus 5 3}
+		{LOYAL_UNIT 1 Colossus 9 3}
+
+		{LOYAL_UNIT 1 Colossus 4 7}
+		{LOYAL_UNIT 1 Colossus 10 7}
+
+		{LOYAL_UNIT 1 Spectre 14 2}
+		{LOYAL_UNIT 1 Spectre 14 8}
+
+		[item]
+			x,y=14,5
+			image=items/altar-evil.png
+		[/item]
 	[/event]
 
 	[event]
@@ -38,6 +52,184 @@
 			speaker=Cain
 			message= _ "Zeth. Morri."
 		[/message]
+
+		[if]
+			[variable]
+				name=went_after_morri
+				boolean_equals=yes
+			[/variable]
+			[then]
+				# TODO: Path of Life
+			[/then]
+			[else]
+				[message]
+					speaker=Zeth
+					message= _ "We have returned with the body of Abari, Master Cain."
+				[/message]
+
+				[message]
+					speaker=Cain
+					message= _ "Place it on the altar."
+				[/message]
+
+				[move_unit]
+					id=Zeth
+					to_x,to_y=13,6
+				[/move_unit]
+
+				[item]
+					x,y=14,5
+					image=units/undead-skeletal/deathblade-dying-7.png
+				[/item]
+
+				[move_unit]
+					id=Cain
+					to_x,to_y=15,5
+				[/move_unit]
+
+				[message]
+					speaker=Cain
+					message= _ "You have done well, my pupil."
+				[/message]
+
+				[message]
+					speaker=Zeth
+					message= _ "I must know, Master Cain, why was I sent on this mission? What was it all for? Did you know what awaited us?"
+				[/message]
+
+				[message]
+					speaker=Cain
+					message= _ "I knew you would face many dangers, Zeth. But I sent you and Morri because you were the only ones I trusted enough to complete it. I knew you could weather whatever Abari threw at you."
+				[/message]
+
+				[message]
+					speaker=Cain
+					message= _ "Abari was my brother. A great mage, an unparalleled necromancer and healer. But his power was too great, and it consumed him. Nearly sixty years ago, I was forced to battle him and slew him in the city. I could not bring myself to destroy his body, but buried him deep below the ground."
+				[/message]
+
+				[message]
+					speaker=Cain
+					message= _ "Only recently did I understand the magnitude of my error, for as you know Abari's power existed after his death and affected the world around him."
+				[/message]
+
+				[message]
+					speaker=Cain
+					message= _ "But I was too old, I could not fight his power myself, and I knew Lady Nella would not spare her own servants, so I sent my best pupils: you. You have not failed me."
+				[/message]
+
+				[message]
+					speaker=Zeth
+					message= _ "I did this for Thar-Nella. I had no idea it was a personal mission I was risking my life and forces on."
+				[/message]
+
+				[message]
+					speaker=Morri
+					message= _ "Cain is your master, Zeth. His orders are to be obeyed."
+				[/message]
+
+				[message]
+					speaker=Cain
+					message= _ "No, he is right to question me, but only after the job is done. By serving me, you have served Thar-Nella, and even now Lady Nella is aware of your commitment and desires an audience with you."
+				[/message]
+
+				[message]
+					speaker=Zeth
+					message= _ "What does she want with me?"
+				[/message]
+
+				[message]
+					speaker=Morlan
+					message= _ "<b>Your power. Your resolve. Your dedication to the task. Follow me, young master of darkness, you shall stand before your destiny.</b>"
+				[/message]
+
+				[move_unit]
+					id=Morlan
+					to_x,to_y=7,1
+				[/move_unit]
+
+				[kill]
+					x,y=7,1
+					animate=no
+				[/kill]
+
+				[message]
+					speaker=Zeth
+					message= _ "To meet Lady Nella... I have truly suceeded."
+				[/message]
+
+				[move_unit]
+					id=Zeth
+					to_x,to_y=7,1
+				[/move_unit]
+
+				[kill]
+					x,y=7,1
+					animate=no
+				[/kill]
+
+				[message]
+					speaker=Twinkle
+					message= _ "Glory to my master, eh?"
+				[/message]
+
+				[move_unit]
+					id=Twinkle
+					to_x,to_y=7,1
+				[/move_unit]
+
+				[kill]
+					x,y=7,1
+					animate=no
+				[/kill]
+
+				[message]
+					speaker=Morri
+					message= _ "I must rest now."
+				[/message]
+
+				[message]
+					speaker=Cain
+					message= _ "Do that, Morri, for you have brought honor to me as your master."
+				[/message]
+
+				[animate_unit]
+					flag=pre_teleport
+					[filter]
+						id=Morri
+					[/filter]
+				[/animate_unit]
+
+				[kill]
+					id=Morri
+					animate=no
+				[/kill]
+
+				[delay]
+					time=500
+				[/delay]
+
+				[message]
+					speaker=Cain
+					message= _ "Abari, we are together at last. Too long have I left you alone. But now I must cast you into oblivion for the final time."
+				[/message]
+
+				{TOMB_VOICE (_ "THE POWER OF ABARI LIVES FOR-")}
+
+				[message]
+					speaker=Cain
+					message= _ "<i>Discarnate. Disperse. Die the last death.</i>"
+				[/message]
+
+				{THUNDER (
+					[remove_item]
+						x,y=14,5
+						image=units/undead-skeletal/deathblade-dying-7.png
+					[/remove_item]
+				)}
+
+				{FADE_TO_BLACK}
+			[/else]
+		[/if]
 
 		{END_CUTSCENE}
 	[/event]
