Use WCHAR_DEFAULT and WCHAR_LOYAL.

--- a/utils/characters.cfg
+++ b/utils/characters.cfg
@@ -1,12 +1,13 @@
 #textdomain wesnoth-ZitU
 
 #define CHARACTER_ZETH
+	{WCHAR_DEFAULT}
 	type=Rogue Mage
 	id=Zeth
 	name= _ "Zeth"
 	# Ridiculous frankenportrait.
 	profile=portraits/zeth.png
-	[modifications]
+	[+modifications]
 		{TRAIT_LOYAL}
 		{TRAIT_RESILIENT}
 	[/modifications]
@@ -15,50 +16,46 @@
 #enddef
 
 #define CHARACTER_MORRI
+	{WCHAR_DEFAULT}
 	type=Silver Mage
 	id=Morri
 	name= _ "Morri"
 	gender=female
-	[modifications]
-		{TRAIT_LOYAL}
+	[+modifications]
 		{TRAIT_INTELLIGENT}
 	[/modifications]
-	{IS_LOYAL}
+	{WCHAR_LOYAL}
 	{IS_HERO}
 	unrenamable=yes
 #enddef
 
 #define CHARACTER_TWINKLE
+	{WCHAR_DEFAULT}
 	type=Fire Drake
 	id=Twinkle
 	name= _ "Twinkle"
-	[modifications]
-		{TRAIT_LOYAL}
+	[+modifications]
 		{TRAIT_STRONG}
 		{TRAIT_QUICK}
 	[/modifications]
-	{IS_LOYAL}
+	{WCHAR_LOYAL}
 	{IS_HERO}
 	unrenamable=yes
 #enddef
 
 #define CHARACTER_CAIN
 	{WCHARACTER_CAIN}
-	{IS_LOYAL}
+	{WCHAR_LOYAL}
 	{IS_HERO}
 	[+modifications]
-		{TRAIT_LOYAL}
 		{TRAIT_AGED}
 	[/modifications]
 #enddef
 
 #define CHARACTER_MORLAN
 	{WCHARACTER_MORLAN_DEAD}
-	{IS_LOYAL}
+	{WCHAR_LOYAL}
 	{IS_HERO}
-	[+modifications]
-		{TRAIT_LOYAL}
-	[/modifications]
 #enddef
 
 #define RECALL_LOYALS
