Mutilated Morri in Finale if you went down the Path of Death.

--- a/scenarios/Finale.cfg
+++ b/scenarios/Finale.cfg
@@ -62,6 +62,14 @@
 				# TODO: Path of Life
 			[/then]
 			[else]
+				[modify_unit]
+					[filter]
+						id=Morri
+					[/filter]
+
+					{TRAIT_MUTILATED}
+				[/modify_unit]
+
 				[message]
 					speaker=Zeth
 					message= _ "We have returned with the body of Abari, Master Cain."
