--- a/wexlfu_preload.cfg
+++ b/wexlfu_preload.cfg
@@ -35,7 +35,7 @@ data/add-ons/Zeth_in_the_Underland#enddef
 #endif
 
 [textdomain]
-	name="wesnoth-Wexlfu"
+	name="wesnoth-Wexlfu-{WXFU}"
 #ifdef ZITU_WEXLFU_LOCAL
 	path={ZITU_DATAPATH}/Wexlfu/translations
 #endif
